Starting for real now

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,1 +1,12 @@
-/* BASIC STYLES HERE */
+/* SECTION Elements & Other */
+
+body{
+  background-color: rgb(222, 173, 235);
+}
+
+/* SECTION Classes */
+
+
+
+/* SECTION IDs */
+
